# api/swagger2.json
@@ -156,6 +156,72 @@
                 ]
             }
         },
+        "/api/v1/role": {
+            "get": {
+                "operationId": "RoleController_findAll",
+                "summary": "Get all roles",
+                "parameters": [
+                    {
+                        "name": "roleName",
+                        "required": false,
+                        "in": "query",
+                        "description": "Find role with name",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Role"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Role"
+                ]
+            }
+        },
+        "/api/v1/role/{id}": {
+            "get": {
+                "operationId": "RoleController_findOne",
+                "summary": "Get a role with id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "required": true,
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Role"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Role"
+                ]
+            }
+        },
         "/api/v1/cohort": {
             "post": {
                 "operationId": "CohortController_create",
@@ -1254,117 +1320,6 @@
                     }
                 ]
             }
-        },
-        "/api/v1/role": {
-            "post": {
-                "operationId": "RoleController_create",
-                "parameters": [],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/CreateRoleDto"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "Role"
-                ]
-            },
-            "get": {
-                "operationId": "RoleController_findAll",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "Role"
-                ]
-            }
-        },
-        "/api/v1/role/{id}": {
-            "get": {
-                "operationId": "RoleController_findOne",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "Role"
-                ]
-            },
-            "patch": {
-                "operationId": "RoleController_update",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/UpdateRoleDto"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "Role"
-                ]
-            },
-            "delete": {
-                "operationId": "RoleController_remove",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    }
-                },
-                "tags": [
-                    "Role"
-                ]
-            }
         }
     },
     "info": {
@@ -1385,6 +1340,10 @@
         {
             "name": "Student class",
             "description": "Student class management"
+        },
+        {
+            "name": "Role",
+            "description": "Roles management"
         }
     ],
     "servers": [],
@@ -1500,6 +1459,28 @@
                         }
                     }
                 }
+            },
+            "Role": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "number",
+                        "example": "1"
+                    },
+                    "appRoleId": {
+                        "type": "string",
+                        "example": "00000000-0000-0000-0000-000000000000"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Student"
+                    }
+                },
+                "required": [
+                    "id",
+                    "appRoleId",
+                    "name"
+                ]
             },
             "CreateCohortDto": {
                 "type": "object",
@@ -1635,14 +1616,6 @@
                 "properties": {}
             },
             "UpdateDegreeProgramDto": {
-                "type": "object",
-                "properties": {}
-            },
-            "CreateRoleDto": {
-                "type": "object",
-                "properties": {}
-            },
-            "UpdateRoleDto": {
                 "type": "object",
                 "properties": {}
             }
