# src/models/role/dto/create-role.dto.ts
@@ -1,1 +1,11 @@
-export class CreateRoleDto {}
+import {IsNotEmpty} from "class-validator";
+import {ApiProperty} from "@nestjs/swagger";
+
+export class CreateRoleDto {
+    @IsNotEmpty()
+    @ApiProperty({ example: 'Student' })
+    name: string
+    @IsNotEmpty()
+    @ApiProperty({ example: '00000000-0000-0000-0000-000000000000' })
+    appRoleId: string
+}
